# RayTracerChallenge

./: .clang-format  .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  CompilerWarnings.cmake  CoverageReport.sh  DartConfiguration.tcl  Makefile  README.md  RunClangTidy.sh  TestScript.cmake  YamlParserRequirements.odt  cmake_install.cmake  codecov.yml  compile_commands.json
.github/workflows/: ClangFormat.yml  ClangTidy.yml  cmake.yml
exercises/: BallisticsSimulator.cpp  CMakeLists.txt  Exercises.hpp  RenderChapter7Scene.cpp  SphereImage.cpp  cover.yml  main.cpp
src/: BallisticsSimulator.cpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Canvas.cpp  Canvas.hpp  ClockFace.cpp  Color.cpp  Color.hpp  Light.hpp  Material.cpp  Material.hpp  Matrix.cpp  Matrix.hpp  ObjParser.cpp  ObjParser.hpp  Ray.cpp  Ray.hpp  RenderChapter7Scene.cpp  Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp  SphereImage.cpp  Transformation.cpp  Transformation.hpp  Tuple.cpp  Tuple.hpp  World.cpp  World.hpp  YamlParser.cpp  YamlParser.hpp  main.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  CameraTest.cpp  CanvasTest.cpp  ColorTest.cpp  LightTest.cpp  MaterialTest.cpp  MatrixTest.cpp  PatternTest.cpp  RayTest.cpp  ShapeTest.cpp  SphereTest.cpp  TransformationTest.cpp  TupleTest.cpp  WorldTest.cpp  YamlParserTest.cpp  main.cpp
